[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quairkit"
version = "0.4.4"
description = "QuAIRKit is a Python research toolbox for developing quantum computing, quantum information, and quantum machine learning algorithms."
readme = "README.md"
requires-python = ">=3.9,<4"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "QuAIR team.", email = "leizhang116.4@gmail.com"}
]
maintainers = [
    {name = "QuAIR team.", email = "leizhang116.4@gmail.com"}
]
keywords = ["quantum computing", "quantum information", "quantum machine learning", "torch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.4.0",
    "scipy",
    "ipython",
    "matplotlib",
    "pdf2image",
    "pytest-xdist",
    "sphinx>=6.1.3",
    "readthedocs-sphinx-search",
    "sphinx-rtd-theme>=1.3.0"
]

[project.urls]
Homepage = "https://www.quair.group"
Repository = "https://github.com/QuAIR/QuAIRKit"
Documentation = "https://quairkit.com/QuAIRKit"

[tool.setuptools.packages.find]
where = ["."]
include = ["quairkit", "quairkit.*"]