[build-system]
# The C++ extension links against libtorch, so ABI must match at runtime.
# Pin the build-time torch version so PEP517 build-isolation environments
# (both CI and source installs) compile against exactly torch 2.11.x and
# produce wheels consistent with README's "built against PyTorch 2.11.x".
requires = ["setuptools>=77", "wheel", "torch==2.11.*", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "quairkit"
version = "0.5.1"
description = "QuAIRKit is a Python research toolbox for developing quantum computing, quantum information, and quantum machine learning algorithms."
readme = "README.md"
requires-python = ">=3.10,<4"
license = { file = "LICENSE" }
authors = [
    {name = "QuAIR team.", email = "leizhang116.4@gmail.com"}
]
maintainers = [
    {name = "QuAIR team.", email = "leizhang116.4@gmail.com"}
]
keywords = ["quantum computing", "quantum information", "quantum machine learning", "torch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.4.0",
    "scipy",
    "ipython",
    "matplotlib",
    "pdf2image",
    "pytest-xdist",
    "sphinx>=6.1.3",
    "readthedocs-sphinx-search",
    "sphinx-rtd-theme>=1.3.0",
    "psutil",
    "tomli; python_version < '3.11'"
]

[project.urls]
Homepage = "https://www.quair.group"
Repository = "https://github.com/QuAIR/QuAIRKit"
Documentation = "https://quairkit.com/QuAIRKit"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["."]
include = ["quairkit", "quairkit.*"]